--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
     "marked": "^12.0.2",
     "pinia": "^2.1.7",
