✨ add Fossil to releases

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -1,4 +1,56 @@
 {
+  "fossil": {
+    "overline": "The latest single",
+    "releaseType": "Single",
+    "title": "Fossil",
+    "releaseDate": "November 12, 2024",
+    "coverLg": "src/assets/album_covers/large/benthos_fossil_cover-lg.avif",
+    "coverSm": "src/assets/album_covers/small/benthos_fossil_cover-sm.avif",
+    "setlist": [
+      {
+        "title": "Fossil",
+        "length": "06:30",
+        "video": "https://www.youtube.com/watch?v=TQuuQxOuI_k"
+      }
+    ],
+    "links": [
+      {
+        "name": "Spotify",
+        "icon": "spotify",
+        "link": "https://open.spotify.com/album/5jLm0U00y9utdjUPT88B1l?si=INDVdUr1Sti7OM-Fr-4LPg"
+      },
+      {
+        "name": "Apple Music",
+        "icon": "apple_music",
+        "link": "https://geo.music.apple.com/it/album/_/1545065439?app=music&at=1000lHKX&ct=linktree_http&itscg=30200&itsct=lt_m&ls=1&mt=1"
+      },
+      {
+        "name": "Amazon Music",
+        "icon": "amazon_music",
+        "link": "https://music.amazon.com/albums/B08QRBWC4M"
+      },
+      {
+        "name": "TIDAL",
+        "icon": "tidal",
+        "link": "https://listen.tidal.com/album/166359206"
+      },
+      {
+        "name": "YouTube",
+        "icon": "youtube",
+        "link": "https://www.youtube.com/playlist?list=OLAK5uy_nOJ6EOxnGqt6Ieu9IOmYU73EivJwY8FeQ"
+      },
+      {
+        "name": "YouTube Music",
+        "icon": "youtube_music",
+        "link": "https://music.youtube.com/playlist?list=OLAK5uy_nOJ6EOxnGqt6Ieu9IOmYU73EivJwY8FeQ"
+      },
+      {
+        "name": "Deezer",
+        "icon": "deezer",
+        "link": "https://www.deezer.com/album/193593432"
+      }
+    ]
+  },
   "ii": {
     "overline": "The debut album",
     "releaseType": "Full-length album",
@@ -9,23 +61,23 @@
     "setlist": [
       {
         "title": "Cartesio",
-        "length": "3:55",
+        "length": "03:55",
         "video": "https://www.youtube.com/watch?v=TQuuQxOuI_k"
       },
-      { "title": "Back and Forth", "length": "4:24" },
+      { "title": "Back and Forth", "length": "04:24" },
       {
         "title": "Talk to Me, Dragonfly!",
-        "length": "4:47",
+        "length": "04:47",
         "video": "https://www.youtube.com/watch?v=iXOm0oeMGZc"
       },
-      { "title": "Facing the Deep", "length": "2:19" },
+      { "title": "Facing the Deep", "length": "02:19" },
       {
         "title": "Debris // Essence",
-        "length": "4:11",
+        "length": "04:11",
         "video": "https://www.youtube.com/watch?v=hzknSmWxw2I"
       },
-      { "title": "II", "length": "5:40" },
-      { "title": "Dissolving Flowers", "length": "6:45" }
+      { "title": "II", "length": "05:40" },
+      { "title": "Dissolving Flowers", "length": "06:45" }
     ],
     "links": [
       {
@@ -75,7 +127,7 @@
     "setlist": [
       {
         "title": "Debris // Essence (B-Side)",
-        "length": "4:48",
+        "length": "04:48",
         "video": "https://www.youtube.com/watch?v=1tVxbYR59Gc"
       }
     ],
@@ -127,7 +179,7 @@
     "setlist": [
       {
         "title": "Talk to Me, Dragonfly! (Live at Dissonance Festival)",
-        "length": "5:43",
+        "length": "05:43",
         "video": "https://www.youtube.com/watch?v=ue1BDz156Z4"
       }
     ],
