💄 migrate icon library from material design to fontawesome + update social links

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vuetify": "^3.6.3"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/crypto-js": "^4.2.2",
