--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -10,7 +10,7 @@
       {
         "title": "Fossil",
         "length": "06:30",
-        "video": "https://www.youtube.com/watch?v=TQuuQxOuI_k"
+        "video": "https://www.youtube.com/watch?v=vtXFiFwSIy0"
       }
     ],
     "links": [
@@ -37,7 +37,7 @@
       {
         "name": "YouTube",
         "icon": "youtube",
-        "link": "https://www.youtube.com/playlist?list=OLAK5uy_nOJ6EOxnGqt6Ieu9IOmYU73EivJwY8FeQ"
+        "link": "https://www.youtube.com/watch?v=vtXFiFwSIy0"
       },
       {
         "name": "YouTube Music",
