💄 add styling to video players in homepage + update fossil links

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -17,22 +17,22 @@
       {
         "name": "Spotify",
         "icon": "spotify",
-        "link": "https://open.spotify.com/album/5jLm0U00y9utdjUPT88B1l?si=INDVdUr1Sti7OM-Fr-4LPg"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       },
       {
         "name": "Apple Music",
         "icon": "apple_music",
-        "link": "https://geo.music.apple.com/it/album/_/1545065439?app=music&at=1000lHKX&ct=linktree_http&itscg=30200&itsct=lt_m&ls=1&mt=1"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       },
       {
         "name": "Amazon Music",
         "icon": "amazon_music",
-        "link": "https://music.amazon.com/albums/B08QRBWC4M"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       },
       {
         "name": "TIDAL",
         "icon": "tidal",
-        "link": "https://listen.tidal.com/album/166359206"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       },
       {
         "name": "YouTube",
@@ -42,12 +42,12 @@
       {
         "name": "YouTube Music",
         "icon": "youtube_music",
-        "link": "https://music.youtube.com/playlist?list=OLAK5uy_nOJ6EOxnGqt6Ieu9IOmYU73EivJwY8FeQ"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       },
       {
         "name": "Deezer",
         "icon": "deezer",
-        "link": "https://www.deezer.com/album/193593432"
+        "link": "https://benthos.lnk.to/Fossil-Single"
       }
     ]
   },
