✨ update fossil links

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -17,12 +17,12 @@
       {
         "name": "Spotify",
         "icon": "spotify",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://open.spotify.com/album/0N5zF8HnCOln8KSUhBYv2j?si=Cc5IL55LQHSMCZCVHEO5Aw"
       },
       {
         "name": "Apple Music",
         "icon": "apple_music",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://music.apple.com/it/album/fossil-single/1774275792"
       },
       {
         "name": "Amazon Music",
@@ -32,7 +32,7 @@
       {
         "name": "TIDAL",
         "icon": "tidal",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://tidal.com/browse/track/393678248"
       },
       {
         "name": "YouTube",
