💬 update Fossil streaming links

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -27,7 +27,7 @@
       {
         "name": "Amazon Music",
         "icon": "amazon_music",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://music.apple.com/it/album/fossil/1774275792?i=1774275795"
       },
       {
         "name": "TIDAL",
@@ -42,12 +42,12 @@
       {
         "name": "YouTube Music",
         "icon": "youtube_music",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://music.youtube.com/watch?v=LOuB-IhdCqY&feature=shared"
       },
       {
         "name": "Deezer",
         "icon": "deezer",
-        "link": "https://benthos.lnk.to/Fossil-Single"
+        "link": "https://deezer.page.link/8i6BVFXq616UikYv9"
       }
     ]
   },
