💬  update Fossil's Amazon Music link

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -27,7 +27,7 @@
       {
         "name": "Amazon Music",
         "icon": "amazon_music",
-        "link": "https://music.apple.com/it/album/fossil/1774275792?i=1774275795"
+        "link": "https://music.amazon.it/albums/B0DK5YYS95"
       },
       {
         "name": "TIDAL",
