--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "jest"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -26,9 +27,11 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@jest/globals": "^29.7.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^9.0.0",
@@ -36,10 +39,12 @@
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "jest": "^29.7.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "sass": "^1.77.0",
     "sass-loader": "^14.2.1",
+    "ts-jest": "^29.2.5",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vue-tsc": "^2.0.11"
