--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@shopify/storefront-api-client": "^1.0.4",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
