--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "test": "jest"
+    "test": "jest",
+    "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
@@ -30,6 +31,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@jest/globals": "^29.7.0",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@shopify/api-codegen-preset": "^1.1.4",
     "@tsconfig/node20": "^20.1.4",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.14",
