💬  fix date format in releases

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -3,7 +3,7 @@
     "overline": "The latest single",
     "releaseType": "Single",
     "title": "Let Me Plunge",
-    "releaseDate": "March 10th, 2025",
+    "releaseDate": "March 10, 2025",
     "coverLg": "/album_covers/large/benthos_plunge_cover-lg.avif",
     "coverSm": "/album_covers/small/benthos_plunge_cover-sm.avif",
     "setlist": [
